# tokengen

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/tokengen/: Cargo.toml
crates/tokengen-derive/: Cargo.toml
crates/tokengen-derive/src/: lib.rs
crates/tokengen/src/: lib.rs  span.rs  token.rs
