[package]
name = "tokengen"
description = "minimal and concise token generation library"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
derive = []

[dependencies]
thiserror = "2.0.11"
tokengen-derive = { path = "../tokengen-derive" }

[dev-dependencies]
expect-test.workspace = true
